fix: donos with no message not showing up fix: subs with no message looking ugly

--- a/assets/chat/css/style.scss
+++ b/assets/chat/css/style.scss
@@ -631,6 +631,12 @@ hr {
     border-color: #e62117;
   }
 
+  &.no-message {
+    .donation-info {
+      border-radius: 10px;
+    }
+  }
+
   &.censored {
     .text {
       display: none;
@@ -742,7 +748,7 @@ hr {
     }
   }
 
-  &.mass-gift {
+  &.no-message {
     .subscription-info {
       border-radius: 10px;
     }
